<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/sixteen_dp"
        android:paddingEnd="@dimen/sixteen_dp"
        android:layout_margin="@dimen/sixteen_dp">

        <!--intro message -->

        <TextView
            android:id="@+id/welcome"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/twenty_six_dp"
            android:layout_marginLeft="@dimen/twenty_six_dp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:fontFamily="@font/raleway"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--Small description layout includes a book and what urban dictionary is about -->
        <LinearLayout
            android:id="@+id/intro_layout"
            android:layout_width="363dp"
            android:layout_height="99dp"
            android:layout_below="@+id/welcome"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/zero_dp"
            android:layout_marginLeft="@dimen/zero_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/zero_dp"
            android:layout_marginRight="@dimen/zero_dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/eight_dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="86dp"
                android:layout_weight="3"
                android:contentDescription="@string/image_ic_dictionary"
                app:srcCompat="@drawable/ic_dictionary" />

            <TextView
                android:layout_width="360dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="9"
                android:fontFamily="@font/raleway"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/ten_dp"
                android:paddingEnd="@dimen/ten_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:text="@string/description"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--button used to start the dictionary -->
        <Button
            android:id="@+id/open_dictionary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginLeft="@dimen/forty_five_dp"
            android:layout_marginTop="@dimen/thirty_six_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/raleway"
            android:text="@string/open_urban_dictionary"
            android:textColor="@color/white" />


    </RelativeLayout>
</layout>