<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.madonasyombua.dictionarykotlin.data.response.Word" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.ui.activities.DefinitionActivity">

    <TextView
        android:id="@+id/definition_"
        android:layout_width="79dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/define"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/definition_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@{model.definition}"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definition_"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@{model.authorName}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/author"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/definition_text"
        app:layout_constraintEnd_toStartOf="@+id/author_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@{model.word}"
        app:layout_constraintBottom_toTopOf="@+id/definition_text"
        app:layout_constraintStart_toEndOf="@+id/definition_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sample_one"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sample"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definition_text" />

    <TextView
        android:id="@+id/example_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@{model.example}"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sample_one"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/thumbs_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginLeft="288dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/thumbs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/example_text"
        app:srcCompat="@drawable/ic_thumb_down_red" />

    <TextView
        android:id="@+id/thumbs_down_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@{String.valueOf(model.thumbsDownNumber)}"
        app:layout_constraintEnd_toEndOf="@+id/thumbs_down"
        app:layout_constraintStart_toStartOf="@+id/thumbs_down"
        app:layout_constraintTop_toBottomOf="@+id/thumbs_down" />

    <ImageView
        android:id="@+id/thumbs_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="304dp"
        android:contentDescription="@string/thumbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/example_text"
        app:srcCompat="@drawable/ic_thumb_up_green"
        android:layout_marginRight="304dp" />

    <TextView
        android:id="@+id/thumbs_up_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@{String.valueOf(model.thumbsUpNumber)}"
        app:layout_constraintEnd_toEndOf="@+id/thumbs_up"
        app:layout_constraintStart_toStartOf="@+id/thumbs_up"
        app:layout_constraintTop_toBottomOf="@+id/thumbs_up" />

    <TextView
        android:id="@+id/written_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/published_on"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/written_on_display"
        app:layout_constraintTop_toBottomOf="@+id/thumbs_up_number" />

    <TextView
        android:id="@+id/written_on_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@{model.writtenOn}"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbs_up_number"
        android:layout_marginRight="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>